turtleart.housemany.HouseMany.scala.error
Compilation error:
HouseMany:42: error: not found: value YDebut
  setPos(xDebut,YDebut+75*3)
                ^